set default url in serenity.properties; add config.properties

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,7 @@
 serenity.requirement.types = capability
 #serenity.requirement.types = capability, epic
 
+webdriver.base.url = http://todomvc.com/examples/angularjs
+
 #serenity.take.screenshots = AFTER_EACH_STEP
 #simplified.stack.traces = false
