--- a/serenity.properties
+++ b/serenity.properties
@@ -1,7 +1,10 @@
 serenity.requirement.types = capability
 #serenity.requirement.types = capability, epic
 
-webdriver.base.url = http://todomvc.com/examples/angularjs
+webdriver.driver = chrome
+webdriver.chrome.driver = C://apps//drivers//chromedriver.exe
+
+webdriver.base.url = http://todomvc.com/examples/angularjs/#/
 
 #serenity.take.screenshots = AFTER_EACH_STEP
 #simplified.stack.traces = false
