--- a/serenity.properties
+++ b/serenity.properties
@@ -4,7 +4,7 @@ serenity.requirement.types = capability
 webdriver.driver = chrome
 webdriver.chrome.driver = C://apps//drivers//chromedriver.exe
 
-webdriver.base.url = http://todomvc.com/examples/angularjs/#/
+#webdriver.base.url = http://todomvc.com/examples/angularjs/#/
 
 #serenity.take.screenshots = AFTER_EACH_STEP
 #simplified.stack.traces = false
