Got login working

--- a/serenity.properties
+++ b/serenity.properties
@@ -2,7 +2,7 @@ serenity.requirement.types = capability
 #serenity.requirement.types = capability, epic
 
 webdriver.driver = chrome
-webdriver.chrome.driver = C://apps//drivers//chromedriver.exe
+webdriver.chrome.driver = ./src/test/resources/webdriver/chromedriver
 
 #webdriver.base.url = http://todomvc.com/examples/angularjs/#/
 
