--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,7 +1,6 @@
-#webapp.url=https://hostname:8443/cyber-indicators/auth/login
-webapp.url = https://sso.redhat.com/auth/realms/redhat-external/protocol/saml/clients/legacy-idp-servlets
+webapp.url=https://hostname:port/cyber-indicators/auth/login
 
 regular.username=
 regular.password=
-login.error.msg=
+
 
