--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,6 @@
-webapp.url=https://hostname:port/cyber-indicators/auth/login
+webapp.url=https://10.23.218.235:8443/cyber-indicators/auth/login
 
-regular.username=
-regular.password=
+regular.username=testautomation
+regular.password=12qwaszx!@QWASZX
 
 
